--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-  <link rel="icon" href="imgs/main/icon.png">
-  <link rel="stylesheet" href="css/pages/main.css">
-  <link rel="stylesheet" href="css/common/_common.css">
-  <link rel="stylesheet" href="css/common/_header.css">
-  <link rel="stylesheet" href="css/common/_footer.css">
-  <link rel="stylesheet" href="css/common/_menu.css">
-  <link rel="stylesheet" href="css/common/_pageback.css">
+  <link rel="icon" href="https://shokawakita.github.io/My-Site.github.io/imgs/main/icon.png">
+  <link rel="stylesheet" href="https://shokawakita.github.io/My-Site.github.io/css/pages/main.css">
+  <link rel="stylesheet" href="https://shokawakita.github.io/My-Site.github.io/css/common/_common.css">
+  <link rel="stylesheet" href="https://shokawakita.github.io/My-Site.github.io/css/common/_header.css">
+  <link rel="stylesheet" href="https://shokawakita.github.io/My-Site.github.io/css/common/_footer.css">
+  <link rel="stylesheet" href="https://shokawakita.github.io/My-Site.github.io/css/common/_menu.css">
+  <link rel="stylesheet" href="https://shokawakita.github.io/My-Site.github.io/css/common/_pageback.css">
   <title>My Site</title>
 </head>
 
@@ -303,7 +303,7 @@
         <ul>
           <li>スライドショー</li>
           <div class="file">
-            <li><a target="_blank" href="artifact/ジャバスクリプトミニゲーム/スライドショー/">practice</a></li>
+            <li><a target="_blank" href="artifact/ジャバスクリプトミニゲーム/スライドショー/practice/index.html">practice</a></li>
           </div>
         </ul>
 
@@ -349,9 +349,9 @@
     </div>
   </footer>
   <a href="#" id="to-top"><i class="bi bi-arrow-up-square"></i></a>
-  <script src="js/menu.js"></script>
-  <script src="js/pageTop.js"></script>
-  <script src="js/API.js"></script>
+  <script src="https://shokawakita.github.io/My-Site.github.io/js/menu.js"></script>
+  <script src="https://shokawakita.github.io/My-Site.github.io/js/pageTop.js"></script>
+  <script src="https://shokawakita.github.io/My-Site.github.io/js/API.js"></script>
 
 </body>
 </html>
