--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link rel="icon" href="imgs/main/icon.png">
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/_common.css">
-  <link rel="stylesheet" href="css/_header.css">
-  <link rel="stylesheet" href="css/_footer.css">
-  <link rel="stylesheet" href="css/_menu.css">
-  <link rel="stylesheet" href="css/_pageback.css">
+  <link rel="stylesheet" href="https://shokawakita.github.io/mysite/css/main.css">
+  <link rel="stylesheet" href="https://shokawakita.github.io/mysite/css/_common.css">
+  <link rel="stylesheet" href="https://shokawakita.github.io/mysite/css/_header.css">
+  <link rel="stylesheet" href="https://shokawakita.github.io/mysite/css/_footer.css">
+  <link rel="stylesheet" href="https://shokawakita.github.io/mysite/css/_menu.css">
+  <link rel="stylesheet" href="https://shokawakita.github.io/mysite/css/_pageback.css">
   <title>My Site</title>
 </head>
 
