--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link rel="icon" href="imgs/main/icon.png">
   <link rel="stylesheet" href="https://shokawakita.github.io/mysite/css/main.css">
-  <link rel="stylesheet" href="https://shokawakita.github.io/mysite/css/_common.css">
-  <link rel="stylesheet" href="https://shokawakita.github.io/mysite/css/_header.css">
-  <link rel="stylesheet" href="https://shokawakita.github.io/mysite/css/_footer.css">
-  <link rel="stylesheet" href="https://shokawakita.github.io/mysite/css/_menu.css">
-  <link rel="stylesheet" href="https://shokawakita.github.io/mysite/css/_pageback.css">
+  <link rel="stylesheet" href="https://shokawakita.github.io/mysite/css/common.css">
+  <link rel="stylesheet" href="https://shokawakita.github.io/mysite/css/header.css">
+  <link rel="stylesheet" href="https://shokawakita.github.io/mysite/css/footer.css">
+  <link rel="stylesheet" href="https://shokawakita.github.io/mysite/css/menu.css">
+  <link rel="stylesheet" href="https://shokawakita.github.io/mysite/css/pageback.css">
   <title>My Site</title>
 </head>
 
