--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link rel="icon" href="imgs/main/icon.png">
   <link rel="stylesheet" href="https://shokawakita.github.io/mysite/css/main.css">
-  <link rel="stylesheet" href="https://shokawakita.github.io/mysite/css/common.css">
-  <link rel="stylesheet" href="https://shokawakita.github.io/mysite/css/header.css">
-  <link rel="stylesheet" href="https://shokawakita.github.io/mysite/css/footer.css">
-  <link rel="stylesheet" href="https://shokawakita.github.io/mysite/css/menu.css">
-  <link rel="stylesheet" href="https://shokawakita.github.io/mysite/css/pageback.css">
+  <link rel="stylesheet" href="https://shokawakita.github.io/mysite/css/_common.css">
+  <link rel="stylesheet" href="https://shokawakita.github.io/mysite/css/_header.css">
+  <link rel="stylesheet" href="https://shokawakita.github.io/mysite/css/_footer.css">
+  <link rel="stylesheet" href="https://shokawakita.github.io/mysite/css/_menu.css">
+  <link rel="stylesheet" href="https://shokawakita.github.io/mysite/css/_pageback.css">
   <title>My Site</title>
 </head>
 
@@ -253,40 +253,40 @@
         <ul>
           <li>ポートフォリオ</li>
           <div class="file">
-            <li><a target="_blank" href="artifact/ジャバスクリプトWeb制作/ポートフォリオ/default/index.html">default</a></li>
-            <li><a target="_blank" href="artifact/ジャバスクリプトWeb制作/ポートフォリオ/practice/index.html">practice</a></li>
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/ジャバスクリプトWeb制作/ポートフォリオ/default/index.html">default</a></li>
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/ジャバスクリプトWeb制作/ポートフォリオ/practice/index.html">practice</a></li>
           </div>
         </ul>
 
         <ul>
           <li>アプリ紹介ページ</li>
           <div class="file">
-            <li><a target="_blank" href="artifact/ジャバスクリプトWeb制作/アプリ紹介ページ/default/index.html">default</a></li>
-            <li><a target="_blank" href="artifact/ジャバスクリプトWeb制作/アプリ紹介ページ/practice/index.html">practice</a></li>
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/ジャバスクリプトWeb制作/アプリ紹介ページ/default/index.html">default</a></li>
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/ジャバスクリプトWeb制作/アプリ紹介ページ/practice/index.html">practice</a></li>
           </div>
         </ul>
 
         <ul>
           <li>ECサイト</li>
           <div class="file">
-            <li><a target="_blank" href="artifact/ジャバスクリプトWeb制作/ECサイト/default/index.html">default</a></li>
-            <li><a target="_blank" href="artifact/ジャバスクリプトWeb制作/ECサイト/practice/index.html">practice</a></li>
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/ジャバスクリプトWeb制作/ECサイト/default/index.html">default</a></li>
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/ジャバスクリプトWeb制作/ECサイト/practice/index.html">practice</a></li>
           </div>
         </ul>
 
         <ul>
           <li>コーディングサイト中級編1</li>
           <div class="file">
-            <li><a target="_blank" href="artifact/模写コーディング/ウェブサイトのコーディング　中級編１/default/index.html">default</a></li>
-            <li><a target="_blank" href="artifact/模写コーディング/ウェブサイトのコーディング　中級編１/practice/index.html">practice</a></li>
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/模写コーディング/ウェブサイトのコーディング　中級編１/default/index.html">default</a></li>
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/模写コーディング/ウェブサイトのコーディング　中級編１/practice/index.html">practice</a></li>
           </div>
         </ul>
 
         <ul>
           <li>コーディングサイト中級編2</li>
           <div class="file">
-            <li><a target="_blank" href="artifact/模写コーディング/ウェブサイトのコーディング　中級編２/default/Top.html">default</a></li>
-            <li><a target="_blank" href="artifact/模写コーディング/ウェブサイトのコーディング　中級編２/practice/Top.html">practice</a></li>
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/模写コーディング/ウェブサイトのコーディング　中級編２/default/Top.html">default</a></li>
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/模写コーディング/ウェブサイトのコーディング　中級編２/practice/Top.html">practice</a></li>
           </div>
         </ul>
       </article>
@@ -296,28 +296,28 @@
         <ul>
           <li>カルーセル</li>
           <div class="file">
-            <li><a target="_blank" href="artifact/カルーセル/index.html">practice</a></li>
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/カルーセル/index.html">practice</a></li>
           </div>
         </ul>
 
         <ul>
           <li>スライドショー</li>
           <div class="file">
-            <li><a target="_blank" href="artifact/ジャバスクリプトミニゲーム/スライドショー/practice/index.html">practice</a></li>
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/ジャバスクリプトミニゲーム/スライドショー/practice/index.html">practice</a></li>
           </div>
         </ul>
 
         <ul>
           <li>ビンゴシート</li>
           <div class="file">
-            <li><a target="_blank" href="artifact/ジャバスクリプトミニゲーム/ビンゴシート/practice/index.html">practice</a></li>
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/ジャバスクリプトミニゲーム/ビンゴシート/practice/index.html">practice</a></li>
           </div>
         </ul>
 
         <ul>
           <li>おみくじ</li>
           <div class="file">
-            <li><a target="_blank" href="artifact/ジャバスクリプトミニゲーム/おみくじ/practice/index.html">practice</a></li>
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/ジャバスクリプトミニゲーム/おみくじ/practice/index.html">practice</a></li>
           </div>
         </ul>
       </article>
@@ -349,9 +349,9 @@
     </div>
   </footer>
   <a href="#" id="to-top"><i class="bi bi-arrow-up-square"></i></a>
-  <script src="https://shokawakita.github.io/mysite/js/menu.js"></script>
-  <script src="https://shokawakita.github.io/mysite/js/pageTop.js"></script>
-  <script src="https://shokawakita.github.io/mysite/js/API.js"></script>
+  <script src="https://shokawakita.github.io/mysitejs/menu.js"></script>
+  <script src="https://shokawakita.github.io/mysitejs/pageTop.js"></script>
+  <script src="https://shokawakita.github.io/mysitejs/API.js"></script>
 
 </body>
 </html>
