--- a/index.html
+++ b/index.html
@@ -349,9 +349,9 @@
     </div>
   </footer>
   <a href="#" id="to-top"><i class="bi bi-arrow-up-square"></i></a>
-  <script src="https://shokawakita.github.io/mysitejs/menu.js"></script>
-  <script src="https://shokawakita.github.io/mysitejs/pageTop.js"></script>
-  <script src="https://shokawakita.github.io/mysitejs/API.js"></script>
+  <script src="https://shokawakita.github.io/mysite/js/menu.js"></script>
+  <script src="https://shokawakita.github.io/mysite/js/pageTop.js"></script>
+  <script src="https://shokawakita.github.io/mysite/js/API.js"></script>
 
 </body>
 </html>
