--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@
         <ul>
           <li>アプリ紹介ページ</li>
           <div class="file">
-            <li><a target="_blank" href="artifact/ジャバスクリプトWeb制作/アプリ紹介ページ/default/index.html">default</a></li>
-            <li><a target="_blank" href="artifact/ジャバスクリプトWeb制作/アプリ紹介ページ/practice/index.html">practice</a></li>
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/web/application/default/index.html">default</a></li>
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/web/application/practice/index.html">practice</a></li>
           </div>
         </ul>
 
