--- a/artifact/web/EC site/practice/index.html
+++ b/artifact/web/EC site/practice/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="../default/img/favicon.png">
+    <link rel="icon" href="../img/favicon.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
     <title>EC Site</title>
 </head>
@@ -13,7 +13,7 @@
     <header class="wrapper">
         <div class="header-area">
 
-            <img src="../default/img/logo.png">
+            <img img/logo.png">
             <i class="bi bi-search"><input type="text" id="index" name="index"></i>
 
             <div class="login">
@@ -32,40 +32,40 @@
 
 
     <div class="sample">
-        <img src="../default/img/hero1.png" alt="ソファ" class="current">
-        <img src="../default/img/hero2.png" alt="イス">
-        <img src="../default/img/hero3.png" alt="2つのイス">
+        <img src="../img/hero1.png" alt="ソファ" class="current">
+        <img src="../img/hero2.png" alt="イス">
+        <img src="../img/hero3.png" alt="2つのイス">
     </div>
 
     <main class="wrapper">
         <h2 class="section-text">OUR ITEMS</h2>
         <div class="items">
             <div class="content">
-                <img src="../default/img/pic1.png">
+                <img src="../img/pic1.png">
                 <p>素敵な家具</p>
                 <p>20,000円</p>
             </div>
 
             <div class="content">
-                <img src="../default/img/pic2.png">
+                <img src="../img/pic2.png">
                 <p>素敵な家具</p>
                 <p>20,000円</p>
             </div>
 
             <div class="content">
-                <img src="../default/img/pic3.png">
+                <img src="../img/pic3.png">
                 <p>素敵な家具</p>
                 <p>20,000円</p>
             </div>
 
             <div class="content">
-                <img src="../default/img/pic4.png">
+                <img src="../img/pic4.png">
                 <p>素敵な家具</p>
                 <p>20,000円</p>
             </div>
 
             <div class="content">
-                <img src="../default/img/pic5.png">
+                <img src="../img/pic5.png">
                 <p>素敵な家具</p>
                 <p>20,000円</p>
             </div>
