--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@
         <ul>
           <li>コーディングサイト中級編1</li>
           <div class="file">
-            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/模写コーディング/ウェブサイトのコーディング　中級編１/default/index.html">default</a></li>
-            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/模写コーディング/ウェブサイトのコーディング　中級編１/practice/index.html">practice</a></li>
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/coding/coding1/default/index.html">default</a></li>
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/coding/coding1/practice/index.html">practice</a></li>
           </div>
         </ul>
 
