--- a/artifact/coding/coding2/practice/Top.html
+++ b/artifact/coding/coding2/practice/Top.html
@@ -92,13 +92,15 @@
 
     </main>
 
-    <footer class="container">
-        <ul id="sns">
-            <li><a target="_blank" href="http://www.instagram.com/accounts/login/">INSTAGRAM</a></li>
-            <li><a target="_blank" href="https://twitter.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJsYW5nIjoiamEifQ%3D%3D%22%7D">TWITTER</a></li>
-            <li><a target="_blank" href="https://www.facebook.com/">FACEBOOK</a></li>
-        </ul>
-        <small>©Furniture Design</small>
+    <footer>
+        <div class="container footer-area">
+            <ul id="sns">
+                <li><a target="_blank" href="http://www.instagram.com/accounts/login/">INSTAGRAM</a></li>
+                <li><a target="_blank" href="https://twitter.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJsYW5nIjoiamEifQ%3D%3D%22%7D">TWITTER</a></li>
+                <li><a target="_blank" href="https://www.facebook.com/">FACEBOOK</a></li>
+            </ul>
+            <small>©Furniture Design</small>
+        </div>
     </footer>
     <script src="js/main.js"></script>
 </body>
