--- a/artifact/coding/coding2/default/Company.html
+++ b/artifact/coding/coding2/default/Company.html
@@ -23,7 +23,7 @@
           <li><a href="products.html">PRODUCTS</a></li>
           <li><a href="about.html">ABOUT</a></li>
           <li><a href="company.html">COMPANY</a></li>
-          <li><a href="mailto:xxxxx@xxx.xxx.com?subject=お問い合わせ">CONTACT</a></li>
+          <li><a href="#">CONTACT</a></li>
         </ul>
       </nav>
 
