--- a/artifact/coding/coding2/default/index.html
+++ b/artifact/coding/coding2/default/index.html
@@ -23,7 +23,7 @@
           <li><a href="products.html">PRODUCTS</a></li>
           <li><a href="about.html">ABOUT</a></li>
           <li><a href="company.html">COMPANY</a></li>
-          <li><a href="mailto:xxxxx@xxx.xxx.com?subject=お問い合わせ">CONTACT</a></li>
+          <li><a href="#">CONTACT</a></li>
         </ul>
       </nav>
 
@@ -39,56 +39,56 @@
       <div id="top" class="wrapper">
         <ul class="product-list">
           <li>
-            <a href="item1.html">
+            <a href="Products-detail.html">
               <img src="img/item1.jpg" alt="">
               <p>プロダクトタイトルプロダクトタイトル</p>
               <p>&yen;99,999 +tax</p>
             </a>
           </li>
           <li>
-            <a href="item2.html">
+            <a href="Products-detail.html">
               <img src="img/item2.jpg" alt="">
               <p>プロダクトタイトルプロダクトタイトル</p>
               <p>&yen;99,999 +tax</p>
             </a>
           </li>
           <li>
-            <a href="item3.html">
+            <a href="Products-detail.html">
               <img src="img/item3.jpg" alt="">
               <p>プロダクトタイトルプロダクトタイトル</p>
               <p>&yen;99,999 +tax</p>
             </a>
           </li>
           <li>
-            <a href="item4.html">
+            <a href="Products-detail.html">
               <img src="img/item4.jpg" alt="">
               <p>プロダクトタイトルプロダクトタイトル</p>
               <p>&yen;99,999 +tax</p>
             </a>
           </li>
           <li>
-            <a href="item5.html">
+            <a href="Products-detail.html">
               <img src="img/item5.jpg" alt="">
               <p>プロダクトタイトルプロダクトタイトル</p>
               <p>&yen;99,999 +tax</p>
             </a>
           </li>
           <li>
-            <a href="item6.html">
+            <a href="Products-detail.html">
               <img src="img/item6.jpg" alt="">
               <p>プロダクトタイトルプロダクトタイトル</p>
               <p>&yen;99,999 +tax</p>
             </a>
           </li>
           <li>
-            <a href="item7.html">
+            <a href="Products-detail.html">
               <img src="img/item7.jpg" alt="">
               <p>プロダクトタイトルプロダクトタイトル</p>
               <p>&yen;99,999 +tax</p>
             </a>
           </li>
           <li>
-            <a href="item8.html">
+            <a href="Products-detail.html">
               <img src="img/item8.jpg" alt="">
               <p>プロダクトタイトルプロダクトタイトル</p>
               <p>&yen;99,999 +tax</p>
