--- a/artifact/coding/coding2/practice/Company.html
+++ b/artifact/coding/coding2/practice/Company.html
@@ -67,13 +67,15 @@
         <iframe id="google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.747798533292!2d139.74324421528692!3d35.658584838820964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188bbd9009ec09%3A0x481a93f0d2a409dd!2z5p2x5Lqs44K_44Ov44O8!5e0!3m2!1sja!2sjp!4v1659531942800!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
 
-    <footer class="container">
-        <ul id="sns">
-            <li><a target="_blank" href="http://www.instagram.com/accounts/login/">INSTAGRAM</a></li>
-            <li><a target="_blank" href="https://twitter.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJsYW5nIjoiamEifQ%3D%3D%22%7D">TWITTER</a></li>
-            <li><a target="_blank" href="https://www.facebook.com/">FACEBOOK</a></li>
-        </ul>
-        <small>©Furniture Design</small>
+    <footer>
+        <div class="container footer-area">
+            <ul id="sns">
+                <li><a target="_blank" href="http://www.instagram.com/accounts/login/">INSTAGRAM</a></li>
+                <li><a target="_blank" href="https://twitter.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJsYW5nIjoiamEifQ%3D%3D%22%7D">TWITTER</a></li>
+                <li><a target="_blank" href="https://www.facebook.com/">FACEBOOK</a></li>
+            </ul>
+            <small>©Furniture Design</small>
+        </div>
     </footer>
     <script src="js/main.js"></script>
 </body>
