--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <header>
     <div class="container" id="header-logo">
       <div id="header-icon"><i class="bi bi-send-fill"></i></div>
-      <h1>My Site(練習用)</h1>
+      <h1>My Site</h1>
     </div>
   </header>
   <div id="target"></div>
@@ -230,23 +230,23 @@
         </table>
       </article>
 
-      <article>
+      <article class="container">
         <p class="theme">【HTML & CSS】</p>
         <p>基本的なタグの理解、アニメーション、フレックスボックス、レスポンシブ・ウェブデザイン、グリッドレイアウトについて学習しました。下で紹介している模写コーディングの中級編はコーディングはレスポンシブ対応入れて3時間程度で作成しました。</p>
         <p class="theme">【JavaScript】</p>
         <p>基礎的な文法の理解に加え、主要フレームワークの学習や、コンパイル・モジュール・npm等のモダンなJavaScriptについての歴史的背景や使用方法をYoutubeで学習しました。実際にscssのcssへの変換やreact.jsの変換、バージョン変更の仕方を実際に行ってみました。
         </p>
         <p class="theme">【PHP MySQL】</p>
-        <p>データベースと連動してCRUD機能の基本的なコーディングを学びました。</p>
+        <p>データベースと連動してCRUD機能の基本的なコーディングを通して、クラスの概念や非同期通信の学習を行いました。環境構築に関しては行っていません。</p>
         <p class="theme">【Git】</p>
-        <p>共同学習で欠かせないgithubでの開発のための取り扱いを学びました。</p>
+        <p>共同学習で欠かせないgithubでの開発のための取り扱いを学びました。基本的なgitコマンドを用いて実際にアップしたり更新を行いました。また、チーム開発する際の知識に関しても学習しました。</p>
       </article>
 
     </section>
 
     <section id="artifact" class="artifact container">
       <h2>artifact</h2>
-      <p>こちらでは私の制作物をご紹介します。見本と練習用で分けています。主にHTML&CSSとJavaScriptを使用して作成しています。もし、模写コーディングしたいという方は活用してみてください!</p>
+      <p>こちらでは私の制作物をご紹介します。見本と練習用で分けています。主にHTML&CSSとJavaScriptを使用して作成しています。勉強したタイミングでコーディングの技術に差がありますが後で振り返ってみたときに自分の成長を感じることができました。もし、模写コーディングしたいという方は下の方にURLを記載してありますので、そちらに飛んでいただいて、実際に活用してみてください!、どのサイトも個人で学習するためにはとても参考になるかと思います!</p>
 
       <article id="copy">
         <p>【模写コーディング】</p>
@@ -321,7 +321,16 @@
           </div>
         </ul>
       </article>
-     
+
+      <article id="quote">
+        <ul class="container">
+          <li>【制作物の参考URL】</li>
+          <li><a href="https://prog-8.com/">・Progate: (https://prog-8.com/)</a></li>
+          <li><a href="https://dotinstall.com/home">・ドットインストール: (https://dotinstall.com/home)</a></li>
+          <li><a href="https://code-step.com/coding-recommend/">・【模写コーディング】　おすすめサイト: (https://code-step.com/coding-recommend/)</a></li>
+        </ul>
+      </article>
+
     </section>
   </main>
 
