--- a/artifact/web/EC site/practice/index.html
+++ b/artifact/web/EC site/practice/index.html
@@ -13,7 +13,7 @@
     <header class="wrapper">
         <div class="header-area">
 
-            <img img/logo.png">
+            <img src="../img/logo.png">
             <i class="bi bi-search"><input type="text" id="index" name="index"></i>
 
             <div class="login">
