react directory added

--- a/index.html
+++ b/index.html
@@ -320,6 +320,14 @@
             <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/minigame/omikuzi/practice/index.html">practice</a></li>
           </div>
         </ul>
+
+        <ul>
+          <li>react(webpackとbandle)</li>
+          <div class="file">
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/react/dist/index.html">practice</a></li>
+          </div>
+        </ul>
+
       </article>
 
       <article id="quote">
