--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
         </ul>
 
         <ul>
-          <li>react(webpackとbandle)</li>
+          <li>カウントボックス(reactをwebpackとbandleで変換し作成)</li>
           <div class="file">
             <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/react/dist/index.html">practice</a></li>
           </div>
