--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://github.com/shokawakita/mysite.git/https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-  <link rel="stylesheet" href="https://github.com/shokawakita/mysite.git/https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-  <link rel="icon" href="https://github.com/shokawakita/mysite.git/imgs/main/icon.png">
-  <link rel="stylesheet" href="https://github.com/shokawakita/mysite.git/style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+  <link rel="icon" href="https://shokawakita.github.io/mysite/imgs/main/icon.png">
+  <link rel="stylesheet" href="https://shokawakita.github.io/mysite/style.css">
   <title>My Site</title>
 </head>
 
@@ -35,11 +35,10 @@
   <div id="menu">
     <nav>
       <ul>
-        <li><a href="https://github.com/shokawakita/mysite.git/#header">Home</a></li>
-        <li><a href="https://github.com/shokawakita/mysite.git/#profile">profile</a></li>
-        <li><a href="https://github.com/shokawakita/mysite.git/#skills">skills</a></li>
-        <li><a href="https://github.com/shokawakita/mysite.git/#artifact">artifact</a></li>
-        <!-- <li><a href="https://github.com/shokawakita/mysite.git/#">used tool</a></li> -->
+        <li><a href="https://shokawakita.github.io/mysite/index.html/#header">Home</a></li>
+        <li><a href="https://shokawakita.github.io/mysite/index.html/#profile">profile</a></li>
+        <li><a href="https://shokawakita.github.io/mysite/index.html/#skills">skills</a></li>
+        <li><a href="https://shokawakita.github.io/mysite/index.html/#artifact">artifact</a></li>
       </ul>
     </nav>
   </div>
@@ -248,40 +247,40 @@
         <ul>
           <li>ポートフォリオ</li>
           <div class="file">
-            <li><a target="_blank" href="https://github.com/shokawakita/mysite.git/artifact/web/portfolio/default/index.html">default</a></li>
-            <li><a target="_blank" href="https://github.com/shokawakita/mysite.git/artifact/web/portfolio/practice/index.html">practice</a></li>
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/web/portfolio/default/index.html">default</a></li>
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/web/portfolio/practice/index.html">practice</a></li>
           </div>
         </ul>
 
         <ul>
           <li>アプリ紹介ページ</li>
           <div class="file">
-            <li><a target="_blank" href="https://github.com/shokawakita/mysite.git/artifact/web/application/default/index.html">default</a></li>
-            <li><a target="_blank" href="https://github.com/shokawakita/mysite.git/artifact/web/application/practice/index.html">practice</a></li>
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/web/application/default/index.html">default</a></li>
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/web/application/practice/index.html">practice</a></li>
           </div>
         </ul>
 
         <ul>
           <li>ECサイト</li>
           <div class="file">
-            <li><a target="_blank" href="https://github.com/shokawakita/mysite.git/artifact/web/EC site/default/index.html">default</a></li>
-            <li><a target="_blank" href="https://github.com/shokawakita/mysite.git/artifact/web/EC site/practice/index.html">practice</a></li>
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/web/EC site/default/index.html">default</a></li>
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/web/EC site/practice/index.html">practice</a></li>
           </div>
         </ul>
 
         <ul>
           <li>コーディングサイト中級編1</li>
           <div class="file">
-            <li><a target="_blank" href="https://github.com/shokawakita/mysite.git/artifact/coding/coding1/default/index.html">default</a></li>
-            <li><a target="_blank" href="https://github.com/shokawakita/mysite.git/artifact/coding/coding1/practice/index.html">practice</a></li>
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/coding/coding1/default/index.html">default</a></li>
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/coding/coding1/practice/index.html">practice</a></li>
           </div>
         </ul>
 
         <ul>
           <li>コーディングサイト中級編2</li>
           <div class="file">
-            <li><a target="_blank" href="https://github.com/shokawakita/mysite.git/artifact/coding/coding2/default/Top.html">default</a></li>
-            <li><a target="_blank" href="https://github.com/shokawakita/mysite.git/artifact/coding/coding2/practice/Top.html">practice</a></li>
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/coding/coding2/default/Top.html">default</a></li>
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/coding/coding2/practice/Top.html">practice</a></li>
           </div>
         </ul>
       </article>
@@ -291,35 +290,35 @@
         <ul>
           <li>カルーセル</li>
           <div class="file">
-            <li><a target="_blank" href="https://github.com/shokawakita/mysite.git/artifact/carousel/index.html">practice</a></li>
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/carousel/index.html">practice</a></li>
           </div>
         </ul>
 
         <ul>
           <li>スライドショー</li>
           <div class="file">
-            <li><a target="_blank" href="https://github.com/shokawakita/mysite.git/artifact/minigame/sildeshow/practice/index.html">practice</a></li>
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/minigame/sildeshow/practice/index.html">practice</a></li>
           </div>
         </ul>
 
         <ul>
           <li>ビンゴシート</li>
           <div class="file">
-            <li><a target="_blank" href="https://github.com/shokawakita/mysite.git/artifact/minigame/bingo/practice/index.html">practice</a></li>
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/minigame/bingo/practice/index.html">practice</a></li>
           </div>
         </ul>
 
         <ul>
           <li>おみくじ</li>
           <div class="file">
-            <li><a target="_blank" href="https://github.com/shokawakita/mysite.git/artifact/minigame/omikuzi/practice/index.html">practice</a></li>
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/minigame/omikuzi/practice/index.html">practice</a></li>
           </div>
         </ul>
 
         <ul>
           <li>カウントボックス(reactをwebpackとbandleで変換し作成)</li>
           <div class="file">
-            <li><a target="_blank" href="https://github.com/shokawakita/mysite.git/artifact/react/dist/index.html">practice</a></li>
+            <li><a target="_blank" href="https://shokawakita.github.io/mysite/artifact/react/dist/index.html">practice</a></li>
           </div>
         </ul>
 
@@ -328,9 +327,9 @@
       <article id="quote">
         <ul class="container">
           <li>【制作物の参考URL】</li>
-          <li><a href="https://github.com/shokawakita/mysite.git/https://prog-8.com/">・Progate: (https://prog-8.com/)</a></li>
-          <li><a href="https://github.com/shokawakita/mysite.git/https://dotinstall.com/home">・ドットインストール: (https://dotinstall.com/home)</a></li>
-          <li><a href="https://github.com/shokawakita/mysite.git/https://code-step.com/coding-recommend/">・【模写コーディング】　おすすめサイト: (https://code-step.com/coding-recommend/)</a></li>
+          <li><a href="https://prog-8.com/">・Progate: (https://prog-8.com/)</a></li>
+          <li><a href="https://dotinstall.com/home">・ドットインストール: (https://dotinstall.com/home)</a></li>
+          <li><a href="https://code-step.com/coding-recommend/">・【模写コーディング】　おすすめサイト: (https://code-step.com/coding-recommend/)</a></li>
         </ul>
       </article>
 
@@ -342,10 +341,10 @@
       <nav class="footer-navi">
         <article>
           <ul class="page-move">
-            <li><a href="https://github.com/shokawakita/mysite.git/#header">Home</a></li>
-            <li><a href="https://github.com/shokawakita/mysite.git/#profile">profile</a></li>
-            <li><a href="https://github.com/shokawakita/mysite.git/#skills">skills</a></li>
-            <li><a href="https://github.com/shokawakita/mysite.git/#artifact">artifact</a></li>
+            <li><a href="https://shokawakita.github.io/mysite/#header">Home</a></li>
+            <li><a href="https://shokawakita.github.io/mysite/#profile">profile</a></li>
+            <li><a href="https://shokawakita.github.io/mysite/#skills">skills</a></li>
+            <li><a href="https://shokawakita.github.io/mysite/#artifact">artifact</a></li>
           </ul>
         </article>
   
@@ -360,8 +359,8 @@
       <small>© My Portfolio</small> 
     </div>
   </footer>
-  <a href="https://github.com/shokawakita/mysite.git/#" id="to-top"><i class="bi bi-arrow-up-square"></i></a>
-  <script src="https://github.com/shokawakita/mysite.git/bundle.js"></script>
+  <a href="https://shokawakita.github.io/mysite/index.html/#" id="to-top"><i class="bi bi-arrow-up-square"></i></a>
+  <script src="https://shokawakita.github.io/mysite/bundle.js"></script>
  
 
 </body>
