--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link rel="icon" href="https://shokawakita.github.io/mysite/imgs/main/icon.png">
-  <link rel="stylesheet" href="https://shokawakita.github.io/mysite/style.css">
+  <link rel="stylesheet" href="https://shokawakita.github.io/mysite/dist/style.css">
   <title>My Site</title>
 </head>
 
@@ -360,7 +358,7 @@
     </div>
   </footer>
   <a href="https://shokawakita.github.io/mysite/index.html/#" id="to-top"><i class="bi bi-arrow-up-square"></i></a>
-  <script src="https://shokawakita.github.io/mysite/bundle.js"></script>
+  <script src="https://shokawakita.github.io/mysite/dist/bundle.js"></script>
  
 
 </body>
