--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link rel="icon" href="https://shokawakita.github.io/mysite/imgs/main/icon.png">
-  <link rel="stylesheet" href="https://shokawakita.github.io/mysite/dist/style.css">
   <title>My Site</title>
 </head>
 
@@ -33,10 +32,10 @@
   <div id="menu">
     <nav>
       <ul>
-        <li><a href="https://shokawakita.github.io/mysite/index.html/#header">Home</a></li>
-        <li><a href="https://shokawakita.github.io/mysite/index.html/#profile">profile</a></li>
-        <li><a href="https://shokawakita.github.io/mysite/index.html/#skills">skills</a></li>
-        <li><a href="https://shokawakita.github.io/mysite/index.html/#artifact">artifact</a></li>
+        <li><a href="#header">Home</a></li>
+        <li><a href="#profile">profile</a></li>
+        <li><a href="#skills">skills</a></li>
+        <li><a href="#artifact">artifact</a></li>
       </ul>
     </nav>
   </div>
@@ -358,7 +357,7 @@
     </div>
   </footer>
   <a href="https://shokawakita.github.io/mysite/index.html/#" id="to-top"><i class="bi bi-arrow-up-square"></i></a>
-  <script src="https://shokawakita.github.io/mysite/dist/bundle.js"></script>
+  <script src="dist/bundle.js"></script>
  
 
 </body>
