--- a/index.html
+++ b/index.html
@@ -338,10 +338,10 @@
       <nav class="footer-navi">
         <article>
           <ul class="page-move">
-            <li><a href="https://shokawakita.github.io/mysite/#header">Home</a></li>
-            <li><a href="https://shokawakita.github.io/mysite/#profile">profile</a></li>
-            <li><a href="https://shokawakita.github.io/mysite/#skills">skills</a></li>
-            <li><a href="https://shokawakita.github.io/mysite/#artifact">artifact</a></li>
+            <li><a href="#header">Home</a></li>
+            <li><a href="#profile">profile</a></li>
+            <li><a href="#skills">skills</a></li>
+            <li><a href="#artifact">artifact</a></li>
           </ul>
         </article>
   
@@ -356,8 +356,8 @@
       <small>© My Portfolio</small> 
     </div>
   </footer>
-  <a href="https://shokawakita.github.io/mysite/index.html/#" id="to-top"><i class="bi bi-arrow-up-square"></i></a>
-  <script src="dist/bundle.js"></script>
+  <a href="#" id="to-top"><i class="bi bi-arrow-up-square"></i></a>
+  <script src="https://shokawakita.github.io/mysite/dist/bundle.js"></script>
  
 
 </body>
